@@ -2,7 +2,7 @@
  * Copyright 2005 Salvatore Sanfilippo <antirez@invece.org>
  * Copyright 2005 Clemens Hintze <c.hintze@gmx.net>
  *
- * $Id: jim.c,v 1.146 2005/04/05 12:18:27 antirez Exp $
+ * $Id: jim.c,v 1.147 2005/04/06 06:35:00 antirez Exp $
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -950,12 +950,6 @@ static Jim_HashTableType JimAssocDataHashTableType = {
  * Stack - This is a simple generic stack implementation. It is used for
  * example in the 'expr' expression compiler.
  * ---------------------------------------------------------------------------*/
-typedef struct Jim_Stack {
-    int len;
-    int maxlen;
-    void **vector;
-} Jim_Stack;
-
 void Jim_InitStack(Jim_Stack *stack)
 {
     stack->len = 0;
@@ -8569,6 +8563,13 @@ void JimRegisterCoreApi(Jim_Interp *interp)
   JIM_REGISTER_API(ScriptIsComplete);
   JIM_REGISTER_API(PackageRequire);
   JIM_REGISTER_API(PackageProvide);
+  JIM_REGISTER_API(InitStack);
+  JIM_REGISTER_API(FreeStack);
+  JIM_REGISTER_API(StackLen);
+  JIM_REGISTER_API(StackPush);
+  JIM_REGISTER_API(StackPop);
+  JIM_REGISTER_API(StackPeek);
+  JIM_REGISTER_API(FreeStackElements);
 }
 
 /* -----------------------------------------------------------------------------
@@ -11432,7 +11433,7 @@ int Jim_InteractivePrompt(Jim_Interp *interp)
     printf("Welcome to Jim version %d.%d, "
            "Copyright (c) 2005 Salvatore Sanfilippo\n",
            JIM_VERSION / 100, JIM_VERSION % 100);
-    printf("CVS ID: $Id: jim.c,v 1.146 2005/04/05 12:18:27 antirez Exp $\n");
+    printf("CVS ID: $Id: jim.c,v 1.147 2005/04/06 06:35:00 antirez Exp $\n");
     Jim_SetVariableStrWithStr(interp, "jim_interactive", "1");
     while (1) {
         char buf[1024];
